Fixed column gaps to be larger when only a single sidebar is present. (#267)

--- a/components/00-base/layout/layout.scss
+++ b/components/00-base/layout/layout.scss
@@ -26,7 +26,17 @@
   &__inner {
     display: grid;
     grid-template-columns: repeat($ct-layout-columns, 1fr);
-    grid-gap: $ct-layout-row-gap $ct-layout-column-gap;
+    gap: $ct-layout-row-gap $ct-layout-column-gap;
+
+    @include ct-breakpoint($ct-layout-breakpoint) {
+      #{$root}--no-top-left#{$root}--no-bottom-left & {
+        gap: $ct-layout-row-gap-right-only $ct-layout-column-gap-right-only;
+      }
+
+      #{$root}--no-top-right#{$root}--no-bottom-right & {
+        gap: $ct-layout-row-gap-left-only $ct-layout-column-gap-left-only;
+      }
+    }
 
     --stl: 1;
     --str: 2;
@@ -34,7 +44,7 @@
     --sbl: 4;
     --sbr: 5;
 
-    #{$root}--no-top-left > #{$root}__inner > & {
+    #{$root}--no-top-left > & {
       --stl: 0;
       --str: 1;
       --m: 2;
@@ -42,7 +52,7 @@
       --sbr: 4;
     }
 
-    #{$root}--no-top-right > #{$root}__inner > & {
+    #{$root}--no-top-right > & {
       --stl: 1;
       --str: 0;
       --m: 2;
@@ -50,7 +60,7 @@
       --sbr: 4;
     }
 
-    #{$root}--no-bottom-left > #{$root}__inner > & {
+    #{$root}--no-bottom-left > & {
       --stl: 1;
       --str: 2;
       --m: 3;
@@ -58,7 +68,7 @@
       --sbr: 4;
     }
 
-    #{$root}--no-bottom-right > #{$root}__inner > & {
+    #{$root}--no-bottom-right > & {
       --stl: 1;
       --str: 2;
       --m: 3;
@@ -66,7 +76,7 @@
       --sbr: 0;
     }
 
-    #{$root}--no-top-left#{$root}--no-top-right > #{$root}__inner > & {
+    #{$root}--no-top-left#{$root}--no-top-right > & {
       --stl: 0;
       --str: 0;
       --m: 1;
@@ -74,7 +84,7 @@
       --sbr: 3;
     }
 
-    #{$root}--no-top-left#{$root}--no-bottom-left > #{$root}__inner > & {
+    #{$root}--no-top-left#{$root}--no-bottom-left > & {
       --stl: 0;
       --str: 1;
       --m: 2;
@@ -82,7 +92,7 @@
       --sbr: 3;
     }
 
-    #{$root}--no-top-left#{$root}--no-bottom-right > #{$root}__inner > & {
+    #{$root}--no-top-left#{$root}--no-bottom-right > & {
       --stl: 0;
       --str: 1;
       --m: 2;
@@ -90,7 +100,7 @@
       --sbr: 0;
     }
 
-    #{$root}--no-top-right#{$root}--no-bottom-left > #{$root}__inner > & {
+    #{$root}--no-top-right#{$root}--no-bottom-left > & {
       --stl: 1;
       --str: 0;
       --m: 2;
@@ -98,7 +108,7 @@
       --sbr: 3;
     }
 
-    #{$root}--no-top-right#{$root}--no-bottom-right > #{$root}__inner > & {
+    #{$root}--no-top-right#{$root}--no-bottom-right > & {
       --stl: 1;
       --str: 0;
       --m: 2;
@@ -106,7 +116,7 @@
       --sbr: 0;
     }
 
-    #{$root}--no-bottom-left#{$root}--no-bottom-right > #{$root}__inner > & {
+    #{$root}--no-bottom-left#{$root}--no-bottom-right > & {
       --stl: 1;
       --str: 2;
       --m: 3;
@@ -114,7 +124,7 @@
       --sbr: 0;
     }
 
-    #{$root}--no-top-left#{$root}--no-top-right#{$root}--no-bottom-left > #{$root}__inner > & {
+    #{$root}--no-top-left#{$root}--no-top-right#{$root}--no-bottom-left > & {
       --stl: 0;
       --str: 0;
       --m: 1;
@@ -122,7 +132,7 @@
       --sbr: 2;
     }
 
-    #{$root}--no-top-left#{$root}--no-top-right#{$root}--no-bottom-right > #{$root}__inner > & {
+    #{$root}--no-top-left#{$root}--no-top-right#{$root}--no-bottom-right > & {
       --stl: 0;
       --str: 0;
       --m: 1;
@@ -130,7 +140,7 @@
       --sbr: 0;
     }
 
-    #{$root}--no-top-left#{$root}--no-bottom-left#{$root}--no-bottom-right > #{$root}__inner > & {
+    #{$root}--no-top-left#{$root}--no-bottom-left#{$root}--no-bottom-right > & {
       --stl: 0;
       --str: 1;
       --m: 2;
@@ -138,7 +148,7 @@
       --sbr: 0;
     }
 
-    #{$root}--no-top-right#{$root}--no-bottom-left#{$root}--no-bottom-right > #{$root}__inner > & {
+    #{$root}--no-top-right#{$root}--no-bottom-left#{$root}--no-bottom-right > & {
       --stl: 1;
       --str: 0;
       --m: 2;
@@ -146,7 +156,7 @@
       --sbr: 0;
     }
 
-    #{$root}--no-top-left#{$root}--no-top-right#{$root}--no-bottom-left#{$root}--no-bottom-right > #{$root}__inner > & {
+    #{$root}--no-top-left#{$root}--no-top-right#{$root}--no-bottom-left#{$root}--no-bottom-right > & {
       --stl: 0;
       --str: 0;
       --m: 1;
